[package]
name = "stalewall-desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.12", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54", features = ["System_UserProfile", "Foundation", "Storage", "Storage_Streams", "Win32_UI_Shell", "Win32_System_Com"] }
futures-lite = "2"