[package]
name = "stalewall-desktop"
version = "0.1.0"
edition = "2021"

[features]
silent = []

[dependencies]
ureq = { version = "2.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
windows = { git = "https://github.com/microsoft/windows-rs", tag = "0.60.0", features = ["System_UserProfile", "Foundation", "Storage", "Storage_Streams", "Win32_UI_Shell", "Win32_System_Com"] }
futures-lite = "2.5"
